app/assets/stylesheets/_overrides.scss
.govuk-template {
  // Used to hide horizontal scrollbars caused by the landing page animation
  overflow-x: hidden;
}

// Usually, we restrict the height of the viewport however this was causing issues on
// the landing page where the footer's grey background was extending beyond its boundary.
// Therefore, we don't restrict the height on the landing page and instead set it to auto.
.govuk-template__body.app-landing-page-layout {
  height: auto;
}

// We're not using a typical grey footer (except on the landing page and help pages) 
// and we therefore want the body element to span the whole page to not reveal the 
// background colour of the html element
.govuk-template__body {
  height: 100%;
  height: 100dvh;

  @media print {
    height: auto;
  }
}

// Footer overrides
.gem-c-layout-footer {
  .govuk-footer__heading.govuk-heading-m {
    border-bottom: none;
    margin-bottom: 0;
  }

  // When we call the footer component in application.html.erb, we specify that it should
  // span 3 columns in order to get the .govuk-grid-column-full class applied as we want
  // it to span the full width. However this is also causes the .govuk-footer__list--columns-3
  // class to be applied to list items. But we want to keep list items all in the same column so
  // we therefore unintuitively override the column-count rule to be 1 rather than 3.
  .govuk-footer__list.govuk-footer__list--columns-3 {
    column-count: 1;
  }

  .govuk-footer__list {
    padding-top: govuk-spacing(2);
    padding-bottom: govuk-spacing(6);
    margin-bottom: govuk-spacing(6);
    border-bottom: 1px solid govuk-colour("mid-grey");

    @include govuk-media-query($from: tablet) {
      padding-bottom: 0;
      padding-top: 0;
      margin-bottom: 0;
      border-bottom: none;
    }
  }

  .govuk-footer__list-item {
    display: block;

    @include govuk-media-query($from: tablet) {
      display: inline-block;
      width: auto;
      margin-right: govuk-spacing(4);
    }
  }
  
  .govuk-footer__section-break {
    border-bottom: none;
    margin-bottom: 0;
  }
}

// The error summary component is used a bit differently in the conversation view - it's placed
// at the top of the message container with the other chat messages rather than at the top
// of the page. As such, we want to remove the bottom margin from this component because
// its default spacing causes an excessive gap between the component and the chat
// messages
.app-conversation-layout__alerts {
  .gem-c-error-summary.govuk-error-summary {
    margin-bottom: 0;
  }
}

.app-landing-page-layout {
  .govuk-header {
    border-bottom: none; // This is to prevent whitespace from appearing between the header and the landing page animation boxes
  }

  .gem-c-error-summary.govuk-error-summary {
    background-color: govuk-colour("white");
  }
}

